# neofs-python-sdk

./: .gitignore  README.md  create_wallet.py  generate_protos.py  probe_endpoints.py  pyproject.toml  requirements.txt  test_sdk.py
neofs/: __init__.py  cli.py  client.py  evm_fund.py
neofs/api/accounting/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/acl/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/audit/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/container/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/link/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/lock/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/netmap/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/object/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/refs/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/reputation/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/session/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/status/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/storagegroup/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
neofs/api/subnet/: types_pb2.py  types_pb2.pyi  (+1 more)
tests/: test_cli.py  test_evm_fund.py
(+3 files in other folders)
